@@ -34,8 +34,8 @@
     </description>
 
     <properties>
-        <cactus.maven.plugin.version>1.4.24</cactus.maven.plugin.version>
-        <cactus.maven.plugin.prev.version>1.4.23</cactus.maven.plugin.prev.version>
+        <cactus.maven.plugin.version>1.4.26</cactus.maven.plugin.version>
+        <cactus.maven.plugin.prev.version>1.4.25</cactus.maven.plugin.prev.version>
         <!-- Version range for cactus - the bump-version will automatically update will
         automatically update the above two properties, and we use this in a
         dependencyManagement section, which allows plugin resolution to pick it up 
@@ -60,120 +60,5 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <profiles>
-        <profile>
-            <id>release</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <properties>
-                <maven.test.skip.exec>true</maven.test.skip.exec>
-                <maven.shade.skip>true</maven.shade.skip>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>aggregate-javadoc</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>javadoc-no-fork</goal>
-                                    <goal>aggregate-no-fork</goal>
-                                </goals>
-                                <configuration>
-                                    <!-- add-reads is an experimental javadoc option -->
-                                    <additionalOptions>
-                                        --add-reads org.apiguardian.api=ALL-UNNAMED
-                                    </additionalOptions>                        
-
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>com.telenav.cactus</groupId>
-                        <artifactId>cactus-maven-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>sanity-check</id>
-                                <phase>initialize</phase>
-                                <goals>
-                                    <goal>check</goal>
-                                </goals>
-                                <configuration>
-                                    <versionFlavor>release</versionFlavor>
-                                    <tolerateVersionInconsistenciesIn>lexakai</tolerateVersionInconsistenciesIn>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <!-- This will check each pom against maven central
-                                to see if it has already been published.  If it
-                                has been and the published pom is identical, it
-                                will tell nexus to skip publishing it; if it has
-                                been published but the pom is not identical, it
-                                will fail the build here. -->
-                                <id>check-published</id>
-                                <phase>initialize</phase>
-                                <goals>
-                                    <goal>check-published</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>lexakai</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>lexakai</goal>
-                                </goals>
-                                <configuration>
-                                    <cactus.verbose>true</cactus.verbose>
-                                    <cactus.overwrite-resources>true</cactus.overwrite-resources>
-                                    <cactus.update-readme>true</cactus.update-readme>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>copy-javadoc</id>
-                                <phase>install</phase>
-                                <goals>
-                                    <goal>codeflowers</goal>
-                                    <goal>copy-aggregated-javadoc</goal>
-                                </goals>
-                                <configuration>
-                                    <cactus.scope>family-or-child-family</cactus.scope>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-gpg-plugin</artifactId>
-                        <executions>
-
-                            <execution>
-
-                                <id>sign-artifacts</id>
-                                <phase>verify</phase>
-                                <configuration>
-                                    <gpgArguments>
-                                        <arg>--pinentry-mode</arg>
-                                        <arg>loopback</arg>
-                                    </gpgArguments>
-                                </configuration>
-                                <goals>
-                                    <goal>sign</goal>
-                                </goals>
-
-                            </execution>
-                        </executions>
-                    </plugin>
-                    
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 
 </project>
